@@ -58,6 +58,9 @@ Zope Changes
 
     Bugs fixed
  
+      - Forward ported fix for OFS.CopySupport tests which corrected
+        signature of a faux security policy's 'validate' method.
+        
       - 'setup.py' did not install the 'Zope' compatibility module
         (the old 'Zope' package has been renamed to 'Zope2').
 
